--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: MobBounties
 version: '${project.version}'
 main: net.minso.mobbounties.Main
 api-version: 1.20
+depend: [Vault]
 commands:
   bounties:
     description: open bounty board
